--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,11 +1,13 @@
 $grass-green: #507445;
-// $danger: #F6433D;
-// $grey-blue: #6481A1;
-// $grey-light: #ECF0F1;
-// $grey-disabled: #BDC3C7;
-// $grey-dark: #34495E;
-//
-// $text-color: darken($grey-blue, 20%);
+
+
+$danger: #F6433D;
+$grey-blue: #6481A1;
+$grey-light: #ECF0F1;
+$grey-disabled: #BDC3C7;
+$grey-dark: #34495E;
+
+$text-color: darken($grey-blue, 20%);
 
 $flash-notice-bg: #009DB2;
 $flash-alert-bg: #B21500;
@@ -13,3 +15,16 @@ $flash-alert-bg: #B21500;
 // $dpl-purple: #8168B1;
 // $facebook-blue: #3B5998;
 // $github-black: black;
+
+$blue-l20: #F6FAFF;
+$blue-l5: #DFEDFE;
+$blue-l4: #BEDBFC;
+$blue-l3: #9ECAFB;
+$blue-l2: #7EB8F9;
+$blue-l1: #5DA6F8;
+$base-blue: #3D94F6;
+$blue-d1: #337BCD;
+$blue-d2: #2963A4;
+$blue-d3: #1F4A7B;
+$blue-d4: #143152;
+$blue-d5: #0A1929;
