--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,8 @@
  *= require_self
  */
 
- // @import "font-awesome";
+ @import "font-awesome";
  @import 'config/*';
- // @import 'components/*';
+ @import 'components/*';
  // @import 'support/*';
  @import 'pages/**/*';
