--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -1,17 +1,13 @@
 <div class="skinny-container">
   <div class="central-container">
-    <div class="container-title">
-      Account
-    </div>
+    <div class="container-title">Account</div>
     <div class="content">
-      <!-- <div class="content-wrapper"> -->
-        <div class="cell">
-          Billing Information
-        </div>
-        <a href="" class="cell">
-          + Add Service Address
-        </a>
-      <!-- </div> -->
+      <div class="cell">
+        Billing Information
+      </div>
+      <a href="" class="cell">
+        + Add Service Address
+      </a>
     </div>
   </div>
 </div>
