--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -1,3 +1,7 @@
+.actions {
+  margin-top: 15px;
+}
+
 // Text-ish
 input[type=color], input[type=date], input[type=datetime], input[type=email],
 input[type=month], input[type=number], input[type=password], input[type=search],
@@ -25,10 +29,10 @@ textarea {
   margin-top: 2px;
   margin-bottom: 2px;
 
-  box-shadow: inset 0px 1px 0px 0px lighten(map-get($pri, base), 15%);
-  border: 1px solid darken(map-get($pri, base), 5%);
+  box-shadow: inset 0px 1px 0px 0px map-get($pri, l3);
+  border: 1px solid map-get($pri, l5);
   border-radius: 6px;
-  background: linear-gradient(to bottom, map-get($pri, base) 5%, darken(map-get($pri, base), 15%) 100%);
+  background: linear-gradient(to bottom, map-get($pri, base) 5%, map-get($pri, d3) 100%);
   background-color: map-get($pri, base);
 
   padding: 6px 24px;
@@ -41,8 +45,9 @@ textarea {
   text-shadow: 0px 1px 0px #1570CD;
 
   &:hover {
-    background: linear-gradient(to bottom, darken(map-get($pri, base), 15%) 5%, map-get($pri, base) 100%);
-    background-color: darken(map-get($pri, base), 15%);
+    cursor: pointer;
+    background: linear-gradient(to bottom, map-get($pri, d3) 5%, map-get($pri, base) 100%);
+    background-color: map-get($pri, d10);
   }
   &:active {
     position: relative;
