--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -2,6 +2,18 @@
   margin-top: 15px;
 }
 
+.inline-fields {
+  display: flex;
+
+  .form-field {
+    width: 100%;
+
+    &:not(:last-of-type) {
+      margin-right: 5px;
+    }
+  }
+}
+
 // Text-ish
 input[type=color], input[type=date], input[type=datetime], input[type=email],
 input[type=month], input[type=number], input[type=password], input[type=search],
@@ -83,18 +95,18 @@ select {
   margin: 4px auto;
   box-shadow: none;
 
-  border: 2px solid $text-color;
+  border: 2px solid rgba($grey-blue, 0.5);
   border-radius: 4px;
 
   background: white url('https://image.freepik.com/free-icon/caret-arrowhead-facing-down_318-34455.png') no-repeat calc(100% - 15px) 55%;
   background-color: white;
   background-size: 10px 10px;
-  padding: 0 8px;
+  padding: 8px;
   width: 100%;
-  height: 28px;
   overflow: hidden;
 
   color: $text-color;
+  font-size: 18px;
   font-weight: normal;
 
   line-height: 100%;
