--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -5,9 +5,17 @@
       <div class="cell">
         Billing Information
       </div>
-      <a href="" class="cell">
-        + Add Service Address
-      </a>
+      <% @service_addresses.each do |service_address| %>
+        <%= link_to edit_service_address_path(service_address), class: :cell do %>
+          <h3><%= service_address.name.presence || service_address.address %></h3>
+          <small>
+            <%= service_address.frequency.titleize %> <br>
+            Last Service:
+            <strong><%= service_address.last_service&.to_formatted_s(:simple) || "Never Serviced" %></strong>
+          </small>
+        <% end %>
+      <% end %>
+      <%= link_to "+ Add Service Address", new_service_address_path, class: :cell %>
     </div>
   </div>
 </div>
