--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -8,6 +8,9 @@ $text-color: darken($grey-blue, 20%);
 
 $flash-notice-bg: #009DB2;
 $flash-alert-bg: #B21500;
+
+$parsley-error-color: #FFD7DC;
+$error-red: red;
 //
 // $dpl-purple: #8168B1;
 // $facebook-blue: #3B5998;
