--- a/app/views/service_addresses/form.html.erb
+++ b/app/views/service_addresses/form.html.erb
@@ -2,7 +2,7 @@
   <div class="central-container">
     <div class="container-title">Service Address</div>
     <div class="content">
-      <%= form_for @service_address do |f| %>
+      <%= form_for @service_address, data: parsley(:validate, trigger: :blur) do |f| %>
         <div class="cell">
 
           <div class="form-field">
@@ -12,24 +12,24 @@
 
           <div class="form-field">
             <%= f.label :address, "Street Address" %><br />
-            <%= f.text_field :address %>
+            <%= f.text_field :address, data: parsley(:required) %>
           </div>
 
           <div class="inline-fields">
             <div class="form-field">
               <%= f.label :city %><br />
-              <%= f.text_field :city %>
+              <%= f.text_field :city, data: parsley(:required) %>
             </div>
 
             <div class="form-field" style="width: 100px;">
               <%= f.label :zip %><br />
-              <%= f.text_field :zip %>
+              <%= f.text_field :zip, data: parsley(:required) %>
             </div>
           </div>
 
           <div class="form-field">
             <%= f.label :frequency %><br />
-            <%= f.select :frequency, ServiceAddress.select_frequencies %>
+            <%= f.select :frequency, ServiceAddress.select_frequencies, data: parsley(:required) %>
           </div>
 
           <div class="text-center">
