--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -4,9 +4,7 @@
       <h1>Rich Lawn's</h1>
       <p>Lawn Care Specialists</p>
       <div class="homepage-btns">
-        <a href="<%=  %>" class="flask"><span></span></a>
-        <a href="" target="_blank" class="github"><span></span></a>
-        <a href="" target="_blank" class="facebook"><span></span></a>
+        <%= link_to "Sign Up", new_user_registration_path, class: "orange btn" %>
       </div>
     </div>
   </div>
