--- a/app/assets/stylesheets/components/containers.scss
+++ b/app/assets/stylesheets/components/containers.scss
@@ -30,6 +30,12 @@
 
     h3 {
       margin: 0;
+
+      small {
+        font-size: 12px;
+        font-style: italic;
+        font-weight: normal;
+      }
     }
   }
   .cell {
