Button and account details

--- a/app/assets/stylesheets/components/containers.scss
+++ b/app/assets/stylesheets/components/containers.scss
@@ -28,6 +28,11 @@
     padding-bottom: 5px;
     width: 100%;
 
+    .content-label {
+      color: grey;
+      font-size: 20px;
+      text-align: center;
+    }
     h3 {
       margin: 0;
 
