--- a/app/views/stripe_cards/index.html.erb
+++ b/app/views/stripe_cards/index.html.erb
@@ -2,6 +2,7 @@
   <div class="central-container">
     <div class="container-title">Billing Information</div>
     <div class="content">
+      <p><%= link_to "Account", account_path, class: :btn %></p>
       <% @stripe_cards.each do |stripe_card| %>
         <%= link_to edit_stripe_card_path(stripe_card), class: :cell do %>
           <% if stripe_card.name.present? %>
@@ -13,7 +14,9 @@
           <% end %>
         <% end %>
       <% end %>
-      <%= link_to "+ Add new card", new_stripe_card_path, class: :cell %>
+      <%= link_to new_stripe_card_path, class: "text-center cell" do %>
+        <small>+ Add new card</small>
+      <% end %>
     </div>
   </div>
 </div>
