--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -4,7 +4,11 @@
       <h1>Rich Lawn's</h1>
       <p>Lawn Care Specialists</p>
       <div class="homepage-btns">
-        <%= link_to "Sign Up", new_user_registration_path, class: "orange btn" %>
+        <% if user_signed_in? %>
+          <%= link_to "Account", account_path, class: "orange btn" %>
+        <% else %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "orange btn" %>
+        <% end %>
       </div>
     </div>
   </div>
