--- a/app/assets/stylesheets/components/containers.scss
+++ b/app/assets/stylesheets/components/containers.scss
@@ -56,6 +56,7 @@
     text-decoration: none;
 
     label { color: darken($grey-blue, 15%); }
+    p { margin: 3px 0; }
   }
   a.cell {
     &:hover {
