--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -2,6 +2,11 @@
   <div class="central-container">
     <div class="container-title">Account</div>
     <div class="content">
+      <% if current_user.admin? %>
+        <p class="text-center" style="margin-top: 0;">
+          <%= link_to "Admin", [:admin, :service_addresses], class: :btn %>
+        </p>
+      <% end %>
 
       <div class="content-label">Account Details</div>
       <%= link_to edit_account_path, class: :cell do %>
