--- a/app/views/admin/service_addresses/index.html.erb
+++ b/app/views/admin/service_addresses/index.html.erb
@@ -2,6 +2,13 @@
   <div class="central-container">
     <div class="container-title">Service Addresses</div>
     <div class="content">
+      <p><%= link_to "Account", account_path, class: :btn %></p>
+
+      <div class="content-label">
+        <%= link_to [:admin, :service_charges], class: :cell do %>
+          <small>View service history &rarr;</small>
+        <% end %>
+      </div>
 
       <div class="content-label">Service Addresses</div>
       <% @service_addresses.each do |service_address| %>
