Refactored service charges into jobsw

--- a/app/views/admin/service_addresses/index.html.erb
+++ b/app/views/admin/service_addresses/index.html.erb
@@ -5,7 +5,7 @@
       <p><%= link_to "Account", account_path, class: :btn %></p>
 
       <div class="content-label">
-        <%= link_to [:admin, :service_charges], class: :cell do %>
+        <%= link_to [:admin, :service_jobs], class: :cell do %>
           <small>View service history &rarr;</small>
         <% end %>
       </div>
