--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -4,8 +4,10 @@
 
 .inline-fields {
   display: flex;
+  vertical-align: middle;
 
   .form-field {
+    position: relative;
     width: 100%;
 
     &:not(:last-of-type) {
