--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -23,46 +23,46 @@ $zindex: (
 // map-get($pri, l1)
 $pri: (
   l21: #FFFFFF,
-  l20: #F7F8F6,
-  l19: #EEF2ED,
-  l18: #E6EBE4,
-  l17: #DEE5DC,
-  l16: #D5DED3,
-  l15: #CDD7CA,
-  l14: #C5D1C1,
-  l13: #BCCAB8,
-  l12: #B4C3AF,
-  l11: #ACBDA6,
-  l10: #A3B69E,
-  l9:  #9BB095,
-  l8:  #93A98C,
-  l7:  #8AA283,
-  l6:  #829C7A,
-  l5:  #7A9571,
-  l4:  #718E68,
-  l3:  #698860,
-  l2:  #618157,
-  l1:  #587B4E,
-  base:  #507445,
-  d1:  #4C6E42,
-  d2:  #48693E,
-  d3:  #45633B,
-  d4:  #415E38,
-  d5:  #3D5835,
-  d6:  #395331,
-  d7:  #354D2E,
-  d8:  #32482B,
-  d9:  #2E4227,
-  d10: #2A3D24,
-  d11: #263721,
-  d12: #22321E,
-  d13: #1E2C1A,
-  d14: #1B2717,
-  d15: #172114,
-  d16: #131C10,
-  d17: #0F160D,
-  d18: #0B110A,
-  d19: #080B07,
-  d20: #040603,
+  l20: #F7FAF4,
+  l19: #EFF5E9,
+  l18: #E7F0DE,
+  l17: #E0EBD4,
+  l16: #D8E6C9,
+  l15: #D0E1BE,
+  l14: #C8DCB3,
+  l13: #C0D7A8,
+  l12: #B8D29D,
+  l11: #B0CD92,
+  l10: #A9C988,
+  l9:  #A1C47D,
+  l8:  #99BF72,
+  l7:  #91BA67,
+  l6:  #89B55C,
+  l5:  #81B051,
+  l4:  #79AB46,
+  l3:  #72A63C,
+  l2:  #6AA131,
+  l1:  #629C26,
+  base:#5A971B,
+  d1:  #56901A,
+  d2:  #518918,
+  d3:  #4D8117,
+  d4:  #497A16,
+  d5:  #457315,
+  d6:  #406C13,
+  d7:  #3C6512,
+  d8:  #385D11,
+  d9:  #33560F,
+  d10: #2F4F0E,
+  d11: #2B480D,
+  d12: #27410C,
+  d13: #223A0A,
+  d14: #1E3209,
+  d15: #1A2B08,
+  d16: #152406,
+  d17: #111D05,
+  d18: #0D1604,
+  d19: #090E03,
+  d20: #040701,
   d21: #000000
 )
