--- a/app/assets/stylesheets/components/parsley.scss
+++ b/app/assets/stylesheets/components/parsley.scss
@@ -6,6 +6,13 @@
   background: $parsley-error-color;
 }
 
+.error-container {
+  border: 2px solid black;
+  border-radius: 8px;
+  background: $parsley-error-color;
+  padding: 5px;
+}
+
 .error-tooltip-wrapper {
   position: absolute;
   right: 0;
