Redirect away from home oage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
   <head>
-    <title><%= content_for(:title) || "Rich Lawn's" %></title>
+    <title><%= content_for(:title) || "Rich Lawns" %></title>
     <% description = content_for(:description) || "" %>
     <meta name="description" content="<%= description %>">
     <meta name="uptime" content="true">
