--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,7 +1,7 @@
 <div id="full-page-wrapper">
   <div class="homepage-wrapper">
     <div class="homepage-container">
-      <h1>Rich Lawn's</h1>
+      <h1>Rich Lawns</h1>
       <p>Lawn Care Specialists</p>
       <div class="homepage-btns">
         <% if user_signed_in? %>
