--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,11 @@
 <div class="skinny-container">
   <div class="central-container">
-    <div class="container-title">Sign up</div>
+    <div class="container-title">Rich Lawns</div>
+    <div class="content">
+      <div class="cell">
+        <p>Sign up here to view your service records. You can also manage your lawn service and set up automatic payments.</p>
+      </div>
+    </div>
     <div class="content">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="cell">
