--- a/app/views/admin/service_addresses/index.html.erb
+++ b/app/views/admin/service_addresses/index.html.erb
@@ -2,7 +2,9 @@
   <div class="central-container">
     <div class="container-title">Service Addresses</div>
     <div class="content">
-      <p><%= link_to "Account", account_path, class: :btn %></p>
+      <div class="btn-spread">
+        <%= link_to "Account", :account, class: :btn %>
+      </div>
 
       <div class="content-label">
         <%= link_to [:admin, :service_jobs], class: :cell do %>
