--- a/app/assets/stylesheets/components/containers.scss
+++ b/app/assets/stylesheets/components/containers.scss
@@ -5,6 +5,18 @@
   max-width: 100%;
 }
 
+.btn-spread {
+  display: flex;
+  justify-content: space-between;
+
+  &.text-center {
+    justify-content: center;
+  }
+  &.text-right {
+    justify-content: flex-end;
+  }
+}
+
 .central-container {
   margin-top: 30px;
   box-shadow: 3px 3px 10px map-get($pri, d5);
