--- a/app/views/admin/service_addresses/form.html.erb
+++ b/app/views/admin/service_addresses/form.html.erb
@@ -2,7 +2,10 @@
   <div class="central-container">
     <div class="container-title">Service Address</div>
     <div class="content">
-      <p><%= link_to "Back", admin_service_addresses_path, class: :btn %></p>
+      <div class="btn-spread">
+        <%= link_to "Back", [:admin, :service_addresses], class: :btn %>
+      </div>
+
       <%= form_for [:admin, @service_address], data: parsley(:validate, trigger: :blur) do |f| %>
         <%= render partial: "layouts/error_container", locals: { resource: @service_address } %>
         <div class="cell">
