--- a/app/views/admin/service_addresses/show.html.erb
+++ b/app/views/admin/service_addresses/show.html.erb
@@ -2,10 +2,10 @@
   <div class="central-container">
     <div class="container-title">Client</div>
     <div class="content">
-      <p>
+      <div class="btn-spread">
         <%= link_to "Back", [:admin, :service_addresses], class: :btn %>
         <%= link_to "Edit", [:edit, :admin, @service_address], class: "btn float-right" %>
-      </p>
+      </div>
 
       <div class="content-label">Account Details</div>
       <%= content_tag :div, class: :cell do %>
@@ -19,7 +19,8 @@
 
       <div class="content-label">Service Address</div>
       <%= content_tag :div, class: :cell do %>
-        <h3><%= @service_address.name.presence || @service_address.address %></h3>
+        <%= content_tag :h3, @service_address.name if @service_address.name.present? %>
+        <%= content_tag :p, @service_address.address if @service_address.address.present? %>
         <small>
           <%= @service_address.frequency.titleize %> <br>
           Last Service:
