--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,10 @@
   <div class="central-container">
     <div class="container-title">Account Details</div>
     <div class="content">
-      <p><%= link_to "Account", account_path, class: :btn %></p>
+      <div class="btn-spread">
+        <%= link_to "Account", :account, class: :btn %>
+      </div>
+      
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <div class="cell">
           <%= render "devise/shared/error_messages", resource: resource %>
