--- a/app/views/stripe_cards/form.html.erb
+++ b/app/views/stripe_cards/form.html.erb
@@ -52,7 +52,10 @@
   <div class="central-container">
     <div class="container-title">Payment Information</div>
     <div class="content">
-      <p><%= link_to "Account", account_path, class: :btn %></p>
+      <div class="btn-spread">
+        <%= link_to "Account", :account, class: :btn %>
+      </div>
+
       <%= form_for @stripe_card, data: parsley(:validate, trigger: :blur), html: { id: "payment-form" } do |f| %>
         <%= render partial: "layouts/error_container", locals: { resource: @stripe_card } %>
         <div id="card-errors" role="alert"></div>
